# iDescriptor

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
.github/: FUNDING.yml
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build.yml
src/: afcexplorerwidget.cpp  afcexplorerwidget.h  airplaywindow.cpp  airplaywindow.h  appcontext.cpp  appcontext.h  appdownloadbasedialog.cpp  appdownloadbasedialog.h  appdownloaddialog.cpp  appdownloaddialog.h  appinstalldialog.cpp  appinstalldialog.h  appstoremanager.cpp  appstoremanager.h  appswidget.cpp  appswidget.h  batterywidget.cpp  batterywidget.h  cableinfowidget.cpp  cableinfowidget.h  detailwindow.cpp  detailwindow.h  devdiskimagehelper.cpp  devdiskimagehelper.h  devdiskimageswidget.cpp  devdiskimageswidget.h  devdiskmanager.cpp  devdiskmanager.h  devicedatabase.cpp  devicedatabase.h  deviceimagewidget.cpp  deviceimagewidget.h  deviceinfowidget.cpp  deviceinfowidget.h  devicelistener.h  devicemanagerwidget.cpp  devicemanagerwidget.h  devicemenuwidget.cpp  devicemenuwidget.h  devicependingwidget.cpp  (+93 more)
src/core/helpers/: compare_product_type.cpp  fetch_app_icon_from_apple.cpp  get_file_tree.cpp  is_dark_mode.cpp  parse_recovery_mode.cpp  read_afc_file_to_byte_array.cpp  warn.cpp
src/core/services/: afc2_client_new.cpp  detect-afc2.cpp  detect_has_been_jailbroken_before.cpp  detect_jailbreak_implementation.cpp  detect_jailbroken.cpp  get-device-info.cpp  get_battery_info.cpp  get_cable_info.cpp  get_file_tree.cpp  get_mounted_image.cpp  init_device.cpp  install_ipa.cpp  load_heic.cpp  query_mobilegestalt.cpp  set_location.cpp
src/core/services/avahi/: avahi_service.cpp  avahi_service.h
src/core/services/dnssd/: dnssd_service.cpp  dnssd_service.h
src/platform/: macos.h
src/platform/windows/: check_deps.cpp  check_deps.h
